...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartupScreen">

    <Button
        android:id="@+id/toLoginBtn"
        android:layout_width="143dp"
        android:layout_height="51dp"
        android:backgroundTint="@color/red"
        android:text="Log In"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
...
